flask-movie-office/flask-movie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-movie-office
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-movie-office
  template:
    metadata:
      labels:
        app: flask-movie-office
    spec:
      containers:
      - name: flask-movie-office
        image: wolihi/flask-movie-office:v1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 7783
